<resources>
    <string name="app_name">乾途教育</string>
    <string name="home_page">首页</string>
    <string name="dynamic">动态</string>
    <string name="course">课程</string>
    <string name="mine">我的</string>
    <string name="net_err_tip">网络异常，请检查网络！</string>
    <string name="pay_mode">支付方式:</string>
    <string name="quality_course">精品课程</string>
    <string name="teacher_recommend">『名师推荐』</string>
    <string name="excellent_class">『精品课堂』</string>
    <string name="search_tip">搜索话题/系列课/直播间</string>
    <string name="about_me_title">关于我们</string>
    <string name="alipay_account">支付宝账号:</string>
    <string name="alipay_name">支付宝姓名:</string>
    <string name="input_account">请输入账号</string>
    <string name="input_name">请输入姓名</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="next_step">下一步</string>
    <string name="tel_number">手机号</string>
    <string name="input_tel_number">请输入您的手机号</string>
    <string name="bug_courses">系列课程购买</string>
    <string name="deposit_alipay">提现至</string>
    <string name="deposit_money">提现金额</string>
    <string name="matter_attention">提现注意事项</string>
    <string name="manage_alipay">管理支付宝</string>
    <string name="detail_title">详情页</string>
    <string name="care_for">+关注</string>
    <string name="look_back">最近更新</string>
    <string name="course_introduction">课程介绍</string>
    <string name="look_back_all">往期课程回顾</string>
    <string name="verification_code">验证码</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="get_verification_code">点击获取验证码</string>
    <string name="forget_password">忘记密码</string>
    <string name="present_course">赞赏课程</string>
    <string name="send_word">寄语</string>
    <string name="input_send_word">请输入寄语</string>
    <string name="buy_num">购买数量</string>
    <string name="buy_default_num">1</string>
    <string name="alipay_money">应付金额:</string>
    <string name="alipay_confirm">确认并支付</string>
    <string name="congratulation">课程购买成功！</string>
    <string name="code_content">
       恭喜你！获得了邀请码，分享课程后，小伙伴在购买同样课程时，输入该邀请码，你将获得返现好礼哦~
    </string>
    <string name="invite_code">邀请码</string>
    <string name="code_copy">复制邀请码</string>
    <string name="clear_video_cache">清除缓存数据会同时清除已缓存视频，是否确认清除？</string>
    <string name="new_version_update">检查到有版本更新，是否立即更新？</string>
    <string name="exit_login">是否退出当前账号？</string>
    <string name="user_cate">是否取消关注？</string>
    <string name="user_collect">是否取消收藏？</string>
    <string name="pay_success">支付成功</string>
    <string name="shared_rule">分享规则</string>
    <string name="logout">退出账号</string>
    <string name="only_wifi_use">只在WIFI时加载</string>
    <string name="fourG_loading_tips">4G流量加载提醒</string>
    <string name="system_message">系统消息通知</string>
    <string name="psd">密码</string>
    <string name="new_psd">新密码</string>
    <string name="new_psd_config">新密码确认</string>
    <string name="input_psd">请输入6–16位密码</string>
    <string name="confirm_psd">密码确认</string>
    <string name="confirm_update">确认修改</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="my_take_in">我的返现收入&#160;&#160;(元)</string>
    <string name="bind_alipay">绑定支付宝</string>
    <string name="bind_wechat">绑定微信</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="email">邮箱</string>
    <string name="save_update">保存修改</string>
    <string name="phone">手机号</string>
    <string name="real_name">真实姓名:</string>
    <string name="phone_num">手机号码:</string>
    <string name="title">标题</string>
    <string name="input_num">请输入您想反馈的问题</string>
    <string name="content">内容</string>
    <string name="input_content">请输入内容</string>
    <string name="del_cache">确认删除</string>
    <string name="del_study_recent">清空学习记录</string>
    <string name="buy_notes">购买记录</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_care">我的关注</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_reward">我的打赏</string>
    <string name="setting">设置</string>
    <string name="mix_search">混合搜索</string>
    <string name="withdraw_notes">提现记录</string>
    <string name="teacher_person">主讲人:</string>
    <string name="course_time">课时:&#160;&#160;</string>
    <string name="true_date">有效期至:</string>
    <string name="select_all">查看全部</string>
    <string name="course_title">课程标题</string>
    <string name="money_only_with_number">￥%1$s</string>
    <string name="course_name_code">课程名称：%1$s</string>
    <string name="copy_invite_code">长按复制邀请码</string>
    <string name="shop_con">商品包含</string>
    <string name="true_time_zhi">有效截止时间:</string>
    <string name="input_invite_code">邀请码(选填)</string>
    <string name="submit_order">提交订单</string>
    <string name="order_money">订单金额</string>
    <string name="pay_mode_check">支付方式选择</string>
    <string name="quiet_alipay">立即支付</string>
    <string name="alipay_max_value">支付宝支付单笔限额100000元</string>
    <string name="wechat_max_value">微信支付单笔限额10000元</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="give_who">赠送给：%1$s</string>
    <string name="x_count">x %1$s</string>
    <string name="person_info">个人资料</string>
    <string name="video_auto_play">免费课-视频自动播放</string>
    <string name="safe_account">账户安全</string>
    <string name="clear_cache">清除缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="version_manage">版本管理</string>
    <string name="apply_cash">申请提现</string>
    <string name="manage_we_chat">管理微信钱包</string>
    <string name="new_user_register">新用户注册</string>
    <string name="search_result">搜索结果</string>
    <string name="order_info">订单信息</string>
    <string name="check_stand">收银台</string>
    <string name="course_or_course_list">课程列表</string>
    <string name="space_page">空间主页</string>
    <string name="get_permission_tip">没有该权限，此应用程序可能无法正常工作。打开应用设置屏幕以修改应用权限</string>
    <string name="submit">提交</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="sina">微博</string>
    <string name="friends_circle">朋友圈</string>
    <string name="share_to">分享至:</string>
    <string name="get_photo_permission_tip">需要获取手机权限</string>
    <string name="message_notify">消息通知</string>
    <string name="register_protocol">用户协议</string>
    <string name="confirmation_money">确认提现</string>
    <string name="register_account">注册账号</string>
    <string name="effective_deadline">有效期截止时间:&#160;&#160;%1$s</string>
    <string name="main_teacher_name">主讲教师:&#160;&#160;%1$s</string>
    <string name="course_time_with_number">当前:&#160;&#160;%1$d &#160;&#160;|&#160;&#160; 总课时:&#160;&#160;%2$d</string>
    <string name="send_sms_success_tip">短信发送成功</string>
    <string name="count_down">重发（%1$d s）</string>
    <string name="send_sms">发送验证码</string>
    <string name="input_text_count_30">%1$d/30</string>
    <string name="input_text_count_300">%1$d/300</string>
    <string name="gift_num">%1$s/个</string>
    <string name="number_yuan">%1$s元</string>
    <string name="number_yuan_minus">-%1$s元</string>
    <string name="main_teacher_with_name">主讲人:&#160;&#160;%1$s</string>
    <string name="course_time_with_num">课时:&#160;&#160;%1$s</string>
    <string name="with_num_course_time">%1$s 课时</string>
    <string name="account_safe">账号安全</string>
    <string name="scan">扫一扫</string>
    <string name="end_time_with_param">有效期至:&#160;&#160;%1$s</string>
    <string name="bind_wx_tip">温馨提示:请填写微信绑定的银行卡的实名认证姓名</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="please_input_invite_code">请输入您的邀请码</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="course_time_num">【第%1$S课】</string>
    <string name="alipay_account_with_param">支付宝（%1$s）</string>
    <string name="wxpay_account_with_param">微信（%1$s）</string>
    <string name="please_set_alipay_account">请设置支付宝账号</string>
    <string name="cash_number_yuan">+%1$s元</string>
    <string name="course_return_price">课程返现%1$s元已到账</string>
    <string name="up_load_video">上传了新视频</string>
    <string name="please_set_wxpay_account">请设置微信账号</string>
    <string name="token_tip">您的账号已在其他地方登录，如有异常请及时联系客服 XXX-XXX-XXXX。</string>
</resources>

