<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_comm_bg_color"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/gray_line" />

    <RadioGroup
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dimen_4dp"
        android:paddingTop="@dimen/dimen_6dp">

        <RadioButton
            android:id="@+id/rb_recreation"
            style="@style/HomeTab"
            android:button="@null"
            android:drawableTop="@drawable/tab_home_selector"
            android:text="@string/home_page" />

        <RadioButton
            android:id="@+id/rb_dynamic"
            style="@style/HomeTab"
            android:button="@null"
            android:drawableTop="@drawable/tab_dynamic_selector"
            android:text="@string/dynamic" />

        <RadioButton
            android:id="@+id/rb_chat"
            style="@style/HomeTab"
            android:button="@null"
            android:drawableTop="@drawable/tab_chat_selector"
            android:text="@string/course" />

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/HomeTab"
            android:button="@null"
            android:drawableTop="@drawable/tab_mine_selector"
            android:text="@string/mine" />
    </RadioGroup>
</LinearLayout>
