<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_comm_bg_color"
    android:orientation="vertical">

    <include
        layout="@layout/head_title_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_45dp" />

    <ImageView
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:src="@drawable/bgs" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:layout_marginLeft="@dimen/dimen_35dp"
        android:layout_marginRight="@dimen/dimen_35dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel_number"
            android:textColor="@color/not_psd"
            android:textSize="@dimen/dimen_16sp" />

        <EditText
            android:id="@+id/et_forget_psd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:background="@null"
            android:hint="@string/input_tel_number"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray_txt" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_35dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_code"
            android:textColor="@color/not_psd"
            android:textSize="@dimen/dimen_16sp" />

        <EditText
            android:id="@+id/auto_code_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:layout_marginStart="@dimen/dimen_15dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_verification_code"
            android:textColor="@color/green_bg"
            android:textColorHint="@color/dark_gray_txt" />

        <Button
            android:id="@+id/send_sms_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green_bg"
            android:padding="@dimen/dimen_20dp"
            android:text="@string/get_verification_code"
            android:textColor="@color/bg_white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/gray_line" />

    <Button
        android:id="@+id/next_step_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_15dp"
        android:layout_marginRight="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_65dp"
        android:background="@drawable/login"
        android:text="@string/next_step"
        android:textColor="@color/bg_white"
        android:textSize="@dimen/dimen_15sp" />
</LinearLayout>
