<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_comm_bg_color"
    android:orientation="vertical">

    <include
        layout="@layout/head_title_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_45dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alipay_account"
            android:textColor="@color/not_psd"
            android:textSize="@dimen/dimen_16sp" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_23dp"
            android:background="@null"
            android:hint="@string/input_account"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray_txt" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/default_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:layout_marginStart="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alipay_name"
            android:textColor="@color/not_psd"
            android:textSize="@dimen/dimen_16sp" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_23dp"
            android:background="@null"
            android:hint="@string/input_name"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray_txt" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/default_view" />

    <Button
        android:id="@+id/btn_config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_25dp"
        android:layout_marginRight="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_65dp"
        android:background="@color/green_bg"
        android:text="@string/confirm"
        android:textColor="@color/bg_white"
        android:textSize="@dimen/dimen_18sp" />
</LinearLayout>
